--- a/index.html
+++ b/index.html
@@ -25,16 +25,25 @@
 
     </div>
 
-    <div class="wireframes">
+    <div class="desktop">
 
         <h3>These are wireframes I plan on referring to when I am designing the pages of my online cookbook. Screens are identified in red in the upper left corner of each page. </h3>
 
-        <img src="imgs/home.png">
-        <img src="imgs/noresults.png">
-        <img src="imgs/filter.png">
-        <img src="imgs/help.png">
-        <img src="imgs/singlerecipe.png">
+        <img src="imgs/desktophome.png">
+        <img src="imgs/desktopfilter.png">
+        <img src="imgs/desktoprecipe.png">
+        <img src="imgs/desktopnores.png">
+        <img src="imgs/desktophelp.png">
 
+        <div class="mobile">
+
+            <img src="imgs/mobilehome.png">
+            <img src="imgs/mobilefilter.png">
+            <img src="imgs/mobilerecipe.png">
+            <img src="imgs/mobilenores.png">
+            <img src="imgs/mobilehelp.png">
+
+        </div>
 
     </div>
 
