cookbook code pages
project code

--- a/index.html
+++ b/index.html
@@ -1,56 +1,154 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Devin Taylor • Alpha</title>
+    <title>The Chew • Home</title>
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="recipe.html">
+    <link rel="stylesheet" href="search.html">
 </head>
 
 <body>
 
-    <div class="header">
-
-        <h1>This is the logo for my online cookbook.</h1>
-        <img src="imgs/logo.png">
-
-    </div>
-
-    <div class="main">
-
-        <h2>Below is a style tile containing my logo graphic, along with fonts and colors I will be using throughout my project.</h2>
-
-        <img src="imgs/style.png">
-
-    </div>
-
-    <div class="desktop">
-
-        <h3>These are wireframes I plan on referring to when I am designing the pages of my online cookbook. Screens are identified in red in the upper left corner of each page. </h3>
-
-        <img src="imgs/desktophome.png">
-        <img src="imgs/desktopfilter.png">
-        <img src="imgs/desktoprecipe.png">
-        <img src="imgs/desktopnores.png">
-        <img src="imgs/desktophelp.png">
-
-        <div class="mobile">
-
-            <img src="imgs/mobilehome.png">
-            <img src="imgs/mobilefilter.png">
-            <img src="imgs/mobilerecipe.png">
-            <img src="imgs/mobilenores.png">
-            <img src="imgs/mobilehelp.png">
-
+    <header>
+        <div class="search">
+            <a href="search.html">
+                <img src="imgs/search.png">
+            </a>
         </div>
 
+        <div class="logo">
+            <img src="imgs/logo.png">
+        </div>
+
+    </header>
+
+    <div class="filter">
+        <button type="button">Meat</button>
+        <button type="button">Vegeterian</button>
+        <button type="button">Fish</button>
+    </div>
+
+    <!--Cards!-->
+
+    <div class="cards">
+
+
+
+        <div class="card">
+
+            <div class="card-content">
+                <a href="recipe.html">
+                    <img src="IDM232-assets/images/Recipe_Ancho-Orange_Chicken_with_Kale_Rice_Roasted_Carrots/hero.jpg">
+                </a>
+                <h2 class="card-title">Ancho-Orange Chicken</h2>
+                <p class="card-subtitle">With Kale Rice & Roasted Carrots</p>
+                <div class="card-info">
+                    <div class="card-span">
+                        <p class="card-mins">Cook Time: 45 mins</p>
+                    </div>
+                    <div class="card-span">
+                        <p class="card-cals">Calories/Serving: 600</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <img src="IDM232-assets/images/Recipe_Beef_Medallions_Mushroom_Sauce_with_Mashed_Potatoes/hero.jpg">
+                <h2 class="card-title">Beef Medallions & Mushroom Sauce</h2>
+                <p class="card-subtitle">With Mashed Potatoes</p>
+                <div class="card-info">
+                    <div class="card-span">
+                        <p class="card-mins">Cook Time: 40 mins</p>
+                    </div>
+                    <div class="card-span">
+                        <p class="card-cals">Calories/Serving: 700</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <img src="IDM232-assets/images/Recipe_Broccoli_Basil_Pesto_Sandwiches_with_Romaine_Citrus_Salad/hero.jpg">
+                <h2 class="card-title">Broccoli & Basil Pesto Sandwiches</h2>
+                <p class="card-subtitle">With Romaine & Citrus Salad</p>
+                <div class="card-info">
+                    <div class="card-span">
+                        <p class="card-mins">Cook Time: 45 mins</p>
+                    </div>
+                    <div class="card-span">
+                        <p class="card-cals">Calories/Serving: 910</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <img src="IDM232-assets/images/Recipe_Broccoli_Mozzarella_Calzones_with_Caesar_Salad/hero.jpg">
+                <h2 class="card-title">Broccoli & Mozzarella Calzones</h2>
+                <p class="card-subtitle">With Caesar Salad</p>
+                <div class="card-info">
+                    <div class="card-span">
+                        <p class="card-mins">Cook Time: 50 mins</p>
+                    </div>
+                    <div class="card-span">
+                        <p class="card-cals">Calories/Serving: 930</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <img src="IDM232-assets/images/Recipe_HoneyButter_Barramundi_with_Zaatar_Roasted_Vegetables/hero.jpg">
+                <h2 class="card-title">Honey-Butter Barramundi</h2>
+                <p class="card-subtitle">With Za'atar Roasted Vegetables</p>
+                <div class="card-info">
+                    <div class="card-span">
+                        <p class="card-mins">Cook Time: 45 mins</p>
+                    </div>
+                    <div class="card-span">
+                        <p class="card-cals">Calories/Serving: 470</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <img src="IDM232-assets/images/Recipe_Crispy_Fish_Sandwiches_with_Tartar_Sauce_Roasted_Sweet_Potato_Wedges/hero.jpg">
+                <h2 class="card-title">Crispy Fish Sandwiches</h2>
+                <p class="card-subtitle">With Tartar Sauce & Roasted Sweet Potato Wedges</p>
+                <div class="card-info">
+                    <div class="card-span">
+                        <p class="card-mins">Cook Time: 40 mins</p>
+                    </div>
+                    <div class="card-span">
+                        <p class="card-cals">Calories/Serving: 790</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="help">
+        <img src="imgs/help.png">
     </div>
 
     <footer class="copyright">
+
         <div class="up" id="up">
             <p>&copy; 2020 Devin Taylor</p>
         </div>
+
     </footer>
 
 
