--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="card-content">
                 <a href="recipe.html">
-                    <img src="IDM232-assets/images/Recipe_Ancho-Orange_Chicken_with_Kale_Rice_Roasted_Carrots/hero.jpg">
+                    <img src="imgs/anchohero.jpg">
                 </a>
                 <h2 class="card-title">Ancho-Orange Chicken</h2>
                 <p class="card-subtitle">With Kale Rice & Roasted Carrots</p>
@@ -59,7 +59,7 @@
 
         <div class="card">
             <div class="card-content">
-                <img src="IDM232-assets/images/Recipe_Beef_Medallions_Mushroom_Sauce_with_Mashed_Potatoes/hero.jpg">
+                <img src="imgs/beefhero.jpg">
                 <h2 class="card-title">Beef Medallions & Mushroom Sauce</h2>
                 <p class="card-subtitle">With Mashed Potatoes</p>
                 <div class="card-info">
@@ -75,7 +75,7 @@
 
         <div class="card">
             <div class="card-content">
-                <img src="IDM232-assets/images/Recipe_Broccoli_Basil_Pesto_Sandwiches_with_Romaine_Citrus_Salad/hero.jpg">
+                <img src="imgs/sandwichhero.jpg">
                 <h2 class="card-title">Broccoli & Basil Pesto Sandwiches</h2>
                 <p class="card-subtitle">With Romaine & Citrus Salad</p>
                 <div class="card-info">
@@ -91,7 +91,7 @@
 
         <div class="card">
             <div class="card-content">
-                <img src="IDM232-assets/images/Recipe_Broccoli_Mozzarella_Calzones_with_Caesar_Salad/hero.jpg">
+                <img src="imgs/calzonehero.jpg">
                 <h2 class="card-title">Broccoli & Mozzarella Calzones</h2>
                 <p class="card-subtitle">With Caesar Salad</p>
                 <div class="card-info">
@@ -107,7 +107,7 @@
 
         <div class="card">
             <div class="card-content">
-                <img src="IDM232-assets/images/Recipe_HoneyButter_Barramundi_with_Zaatar_Roasted_Vegetables/hero.jpg">
+                <img src="imgs/honeyhero.jpg">
                 <h2 class="card-title">Honey-Butter Barramundi</h2>
                 <p class="card-subtitle">With Za'atar Roasted Vegetables</p>
                 <div class="card-info">
@@ -123,7 +123,7 @@
 
         <div class="card">
             <div class="card-content">
-                <img src="IDM232-assets/images/Recipe_Crispy_Fish_Sandwiches_with_Tartar_Sauce_Roasted_Sweet_Potato_Wedges/hero.jpg">
+                <img src="imgs/fishhero.jpg">
                 <h2 class="card-title">Crispy Fish Sandwiches</h2>
                 <p class="card-subtitle">With Tartar Sauce & Roasted Sweet Potato Wedges</p>
                 <div class="card-info">
