--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>The Chew • Home</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="main.css">
@@ -15,15 +16,16 @@
 
     <header>
         <div class="search">
-            <a href="search.html">
-                <img src="imgs/search.png">
-            </a>
+            <input id="search" name="Search" type="search" placeholder="Search..." value="" />
+            <button type="submit">GO</button>
         </div>
+
 
         <div class="logo">
-            <img src="imgs/logo.png">
+            <h1>The Chew
+                <img src="imgs/spoon.png">
+            </h1>
         </div>
-
     </header>
 
     <div class="filter">
@@ -35,8 +37,6 @@
     <!--Cards!-->
 
     <div class="cards">
-
-
 
         <div class="card">
 
@@ -139,8 +139,20 @@
 
     </div>
 
-    <div class="help">
-        <img src="imgs/help.png">
+    <div class="box">
+        <a class="button" href="#popup1"> <img src="imgs/help.png"></a>
+    </div>
+
+    <div id="popup1" class="overlay">
+        <div class="popup">
+            <h1>We're here to Help!</h1>
+            <a class="close" href="#">&times;</a>
+            <div class="content">
+                <h2>Browse for recipes on the home page, filter your preferencecs, and follow the steps for a delicious meal.
+                </h2>
+                <img src="imgs/logo.png">
+            </div>
+        </div>
     </div>
 
     <footer class="copyright">
