--- a/recipe.html
+++ b/recipe.html
@@ -12,15 +12,9 @@
 
 <body>
 
-    <div class="search">
-        <a href="search.html">
-            <img src="imgs/search.png">
-        </a>
-    </div>
-
     <div class="home">
         <a href="index.html">
-            <img src="imgs/logo.png">
+            <img src="imgs/spoon.png">
         </a>
     </div>
 
@@ -41,7 +35,6 @@
             </ul>
         </div>
 
-        <hr>
 
         <div class="ingredients">
             <h2>Ingredients</h2>
@@ -101,9 +94,23 @@
 
         </div>
 
-        <div class="help">
-            <img src="imgs/help.png">
+        <div class="box">
+            <a class="button" href="#popup1"> <img src="imgs/help.png"></a>
+        </div>
+
+        <div id="popup1" class="overlay">
+            <div class="popup">
+                <h1>We're here to Help!</h1>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                    <h2>Browse for recipes on the home page, filter your preferencecs, and follow the steps for a delicious meal.
+                    </h2>
+                    <img src="imgs/logo.png">
+                </div>
+            </div>
         </div>
 
     </div>
-</body></html>
+</body>
+
+</html>
