--- a/recipe.html
+++ b/recipe.html
@@ -7,32 +7,35 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="search.html">
 </head>
 
-<body>
-
+<header>
     <div class="home">
         <a href="index.html">
             <img src="imgs/spoon.png">
         </a>
     </div>
+</header>
+
+<body>
 
     <div class="wrapper">
 
-        <div class="titleDesc">
-            <img src="imgs/anchohero.jpg">
+
+        <div class="plateimg"><img src="imgs/anchohero.jpg" /></div>
+        <div class="platetext">
             <h1>Ancho-Orange Chicken</h1>
 
             <h3>With Kale Rice & Roasted Carrots</h3>
 
             <p>Weʼre amping up chicken breasts with a glaze of smoky ancho chile paste and fresh orange juice in this recipe. On the side, roasted carrots and lightly creamy, golden raisin-studded rice perfectly accent the sweetness of the glaze.</p>
 
-            <ul style="list-style-type:none;">
+            <ul>
                 <li>Time: 45 mins</li>
                 <li>Servings: 4</li>
                 <li>Calories/Serving: 600</li>
             </ul>
+
         </div>
 
 
@@ -40,7 +43,7 @@
             <h2>Ingredients</h2>
             <img src="imgs/ingredients.png">
 
-            <ul style="list-style-type:none;">
+            <ul>
                 <li>4 Boneless, Skinless Chicken Breasts</li>
                 <li> 4 Carrots</li>
                 <li> 3 Tbsps Golden Raisins</li>
@@ -94,23 +97,23 @@
 
         </div>
 
-        <div class="box">
-            <a class="button" href="#popup1"> <img src="imgs/help.png"></a>
-        </div>
-
-        <div id="popup1" class="overlay">
-            <div class="popup">
-                <h1>We're here to Help!</h1>
-                <a class="close" href="#">&times;</a>
-                <div class="content">
-                    <h2>Browse for recipes on the home page, filter your preferencecs, and follow the steps for a delicious meal.
-                    </h2>
-                    <img src="imgs/logo.png">
-                </div>
-            </div>
-        </div>
-
     </div>
 </body>
+
+<div class="box">
+    <a class="button" href="#popup1"> <img src="imgs/help.png"></a>
+
+    <div id="popup1" class="overlay">
+        <div class="popup">
+            <h1>We're here to Help!</h1>
+            <a class="close" href="#">&times;</a>
+            <div class="content">
+                <h2>Browse for recipes on the home page, filter your preferencecs, and follow the steps for a delicious meal.
+                </h2>
+                <img src="imgs/logo.png">
+            </div>
+        </div>
+    </div>
+</div>
 
 </html>
