--- a/index.html
+++ b/index.html
@@ -9,42 +9,32 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="recipe.html">
+    <link rel="stylesheet" href="fontsheet.css">
 </head>
 
 <body>
-
     <div class="indexwrap">
-
         <header>
             <div class="search">
                 <input id="search" name="Search" type="search" placeholder="Search..." value="" />
                 <button type="submit">GO</button>
             </div>
-
-
             <div class="logo">
                 <h1>The Chew
                     <img src="imgs/spoon.png">
                 </h1>
             </div>
         </header>
-
         <div class="filter">
             <button type="button">Meat</button>
             <button type="button">Vegeterian</button>
             <button type="button">Fish</button>
         </div>
-
         <!--Cards!-->
-
         <div class="cards">
-
             <div class="card">
-
                 <div class="card-content">
-                    <a href="recipe.html">
-                        <img src="imgs/anchohero.jpg">
-                    </a>
+                    <a href="recipe.html"> <img src="imgs/anchohero.jpg"> </a>
                     <h2 class="card-title">Ancho-Orange Chicken</h2>
                     <p class="card-subtitle">With Kale Rice & Roasted Carrots</p>
                     <div class="card-info">
@@ -57,10 +47,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
-                <div class="card-content">
-                    <img src="imgs/beefhero.jpg">
+                <div class="card-content"> <img src="imgs/beefhero.jpg">
                     <h2 class="card-title">Beef Medallions & Mushroom Sauce</h2>
                     <p class="card-subtitle">With Mashed Potatoes</p>
                     <div class="card-info">
@@ -73,10 +61,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
-                <div class="card-content">
-                    <img src="imgs/sandwichhero.jpg">
+                <div class="card-content"> <img src="imgs/sandwichhero.jpg">
                     <h2 class="card-title">Broccoli & Basil Pesto Sandwiches</h2>
                     <p class="card-subtitle">With Romaine & Citrus Salad</p>
                     <div class="card-info">
@@ -89,10 +75,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
-                <div class="card-content">
-                    <img src="imgs/calzonehero.jpg">
+                <div class="card-content"> <img src="imgs/calzonehero.jpg">
                     <h2 class="card-title">Broccoli & Mozzarella Calzones</h2>
                     <p class="card-subtitle">With Caesar Salad</p>
                     <div class="card-info">
@@ -105,10 +89,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
-                <div class="card-content">
-                    <img src="imgs/honeyhero.jpg">
+                <div class="card-content"> <img src="imgs/honeyhero.jpg">
                     <h2 class="card-title">Honey-Butter Barramundi</h2>
                     <p class="card-subtitle">With Za'atar Roasted Vegetables</p>
                     <div class="card-info">
@@ -121,10 +103,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
-                <div class="card-content">
-                    <img src="imgs/fishhero.jpg">
+                <div class="card-content"> <img src="imgs/fishhero.jpg">
                     <h2 class="card-title">Crispy Fish Sandwiches</h2>
                     <p class="card-subtitle">With Tartar Sauce & Roasted Sweet Potato Wedges</p>
                     <div class="card-info">
@@ -137,35 +117,25 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
         <div class="box">
             <a class="button" href="#popup1"> <img src="imgs/help.png"></a>
         </div>
-
         <div id="popup1" class="overlay">
             <div class="popup">
-                <h1>We're here to Help!</h1>
-                <a class="close" href="#">&times;</a>
+                <h1>We're here to Help!</h1> <a class="close" href="#">&times;</a>
                 <div class="content">
                     <h2>Browse for recipes on the home page, filter your preferencecs, and follow the steps for a delicious meal.
-                    </h2>
-                    <img src="imgs/logo.png">
+                    </h2> <img src="imgs/logo.png">
                 </div>
             </div>
         </div>
-
-
         <footer class="copyright">
-
             <div class="up" id="up">
                 <p>&copy; 2020 Devin Taylor</p>
             </div>
-
         </footer>
-
     </div>
+</body>
 
-
-</body></html>
+</html>
