--- a/recipe.html
+++ b/recipe.html
@@ -8,41 +8,27 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="main.css">
 </head>
-
 <header>
     <div class="home">
-        <a href="index.html">
-            <img src="imgs/spoon.png">
-        </a>
+        <a href="index_04_integration.php"> <img src="imgs/spoon.png"> </a>
     </div>
 </header>
 
 <body>
-
     <div class="wrapper">
-
-
-        <div class="plateimg"><img src="imgs/anchohero.jpg" /></div>
+        <div class="plateimg"><img src="imgs/0101_FPP_Chicken-Rice_97338_WEB_SQ_hi_res.jpg" /></div>
         <div class="platetext">
             <h1>Ancho-Orange Chicken</h1>
-
             <h3>With Kale Rice & Roasted Carrots</h3>
-
             <p>Weʼre amping up chicken breasts with a glaze of smoky ancho chile paste and fresh orange juice in this recipe. On the side, roasted carrots and lightly creamy, golden raisin-studded rice perfectly accent the sweetness of the glaze.</p>
-
             <ul>
                 <li>Time: 45 mins</li>
                 <li>Servings: 4</li>
                 <li>Calories/Serving: 600</li>
             </ul>
-
         </div>
-
-
         <div class="ingredients">
-            <h2>Ingredients</h2>
-            <img src="imgs/ingredients.png">
-
+            <h2>Ingredients</h2> <img src="imgs/ingredients.png">
             <ul>
                 <li>4 Boneless, Skinless Chicken Breasts</li>
                 <li> 4 Carrots</li>
@@ -56,61 +42,30 @@
                 <li> 3/4 cup Jasmine Rice</li>
             </ul>
         </div>
-
         <div class="instructions">
-            <h2>1. The Rice</h2>
-
-            <img src="imgs/rice.jpg">
-
+            <h2>1. The Rice</h2> <img src="imgs/rice.jpg">
             <p>Place an oven rack in the center of the oven, then preheat to 450°F. In a medium pot, combine the <strong>rice, a big pinch of salt,</strong> and <strong>1 1/2 cups of water.</strong> Heat to boiling on high. Once boiling, cover and reduce the heat to low. Cook 12 to 14 minutes, or until the water has been absorbed and the rice is tender. Turn off the heat and fluff with a fork. Cover to keep warm.</p>
-
-            <h2>2. The Glaze </h2>
-
-            <img src="imgs/glaze.jpg">
-
+            <h2>2. The Glaze </h2> <img src="imgs/glaze.jpg">
             <p>While the rice cooks, wash and dry the fresh produce. Peel the <strong>carrots;</strong> quarter lengthwise, then halve crosswise. Peel and roughly chop the <strong>garlic.</strong> Remove and discard the stems of the <strong>kale;</strong> finely chop the leaves. Using a peeler, remove the <strong>lime</strong> rind, avoiding the white pith; mince to get 2 teaspoons of zest (or use a zester). Halve the lime crosswise. Halve the <strong>orange;</strong> squeeze the juice into a bowl, straining out any seeds. Whisk in the <strong>chile paste</strong> and <strong>2 tablespoons of water</strong> until smooth.</p>
-
-            <h2>3. The Carrots</h2>
-
-            <img src="imgs/carrots.jpg">
-
+            <h2>3. The Carrots</h2> <img src="imgs/carrots.jpg">
             <p>Place the <strong>sliced carrots</strong> on a sheet pan. Drizzle with olive oil and season with salt and pepper; toss to coat. Arrange in an even layer. Roast 15 to 17 minutes, or until tender when pierced with a fork. Remove from the oven.</p>
-
-            <h2>4. The Kale</h2>
-
-            <img src="imgs/kale.jpg">
-
+            <h2>4. The Kale</h2> <img src="imgs/kale.jpg">
             <p>While the carrots roast, in a large pan (nonstick, if you have one), heat 2 teaspoons of olive oil on medium-high until hot. Add the <strong>chopped garlic</strong> and cook, stirring constantly, 30 seconds to 1 minute, or until fragrant. Add the <strong>chopped kale;</strong> season with salt and pepper. Cook, stirring occasionally, 3 to 4 minutes, or until slightly wilted. Add <strong>1/3 cup of water;</strong> season with salt and pepper. Cook, stirring occasionally, 3 to 4 minutes, or until the kale has wilted and the water has cooked off. Transfer to the pot of <strong>cooked rice.</strong> Stir to combine; season with salt and pepper to taste. Cover to keep warm. Wipe out the pan.</p>
-
-            <h2>5. The Chicken</h2>
-
-            <img src="imgs/chicken.jpg">
-
+            <h2>5. The Chicken</h2> <img src="imgs/chicken.jpg">
             <p>While the carrots continue to roast, pat the <strong>chicken</strong> dry with paper towels; season with salt and pepper on both sides. In the same pan, heat 2 teaspoons of olive oil on medium-high until hot. Add the seasoned chicken and cook 4 to 6 minutes on the first side, or until browned. Flip and cook 2 to 3 minutes, or until lightly browned. Add the <strong>glaze</strong> and cook, frequently spooning the glaze over the chicken, 2 to 3 minutes, or until the chicken is coated and cooked through. Turn off the heat; stir the <strong>butter</strong> and <strong>the juice of 1 lime half</strong> into the glaze until the butter has melted. Season with salt and pepper to taste.</p>
-
-            <h2>6. The Final Touches</h2>
-
-            <img src="imgs/finish.jpg">
-
+            <h2>6. The Final Touches</h2> <img src="imgs/finish.jpg">
             <p>To the pot of <strong>cooked rice and kale,</strong> add the <strong>lime zest, crème fraîche, raisins,</strong> and <strong>the juice of the remaining lime half.</strong> Stir to combine; season with salt and pepper to taste. Serve the <strong>glazed chicken</strong> with the finished rice and <strong>roasted carrots.</strong> Top the chicken with the remaining glaze from the pan. Enjoy!</p>
-
-
         </div>
-
     </div>
 </body>
-
 <div class="box">
     <a class="button" href="#popup1"> <img src="imgs/help.png"></a>
-
     <div id="popup1" class="overlay">
         <div class="popup">
-            <h1>We're here to Help!</h1>
-            <a class="close" href="#">&times;</a>
+            <h1>We're here to Help!</h1> <a class="close" href="#">&times;</a>
             <div class="content">
                 <h2>Browse for recipes on the home page, filter your preferencecs, and follow the steps for a delicious meal.
-                </h2>
-                <img src="imgs/logo.png">
+                </h2> <img src="imgs/logo.png">
             </div>
         </div>
     </div>
