--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -45,8 +45,8 @@
         <div class="solution">
             <h2>The Solution</h2>
             <p>For my final design, I wanted to create an online cookbook that was accessible and easy to navigate for all users. The search bar is coded to detect any input and pull similar data from the MySQL database in seconds, providing a curious user with the results they want to see. The filters section is split into categories by protein, so that users who have specific dietary needs or restrictions can quickly find a recipe that can satisfy them. Each recipe on the main page includes an image of what the final dish may resemble, cook time, and calories per serving so that visitors to my website can have an enjoyable and efficient experience. Recipe pages include a list of ingredients, as well as step-by-step instructions with images to ensure a manageable process.</p>
-            <p>View my online cookbook, The Chew, <a href="link">here!</a></p>
-            <p>View the code I used for this project <a href="link">here!</a></p>
+            <p>View my online cookbook, The Chew, <a href="http://devintaylor.tech/idm232/final/">here!</a></p>
+            <p>View the code I used for this project <a href="https://github.com/devinntaylor/idm232-dnt39">here!</a></p>
         </div>
         <div class="solutions">
             <h2>The Solutions</h2>
